--- a/datenschutz.html
+++ b/datenschutz.html
@@ -116,10 +116,10 @@
                 <h3>Hinweis zur verantwortlichen Stelle</h3>
                 <p>Die verantwortliche Stelle für die Datenverarbeitung auf dieser Website ist:</p>
                 <p>
-                    [Firmenname]<br>
-                    [Straße Nr.]<br>
-                    [PLZ Ort]<br><br>
-                    Telefon: [Telefonnummer]<br>
+                    HIMETA<br>
+                    An der Buchhalde 8<br>
+                    78086 Brigachtal<br><br>
+                    Telefon: 07721 9162248<br>
                     E-Mail: <a href="mailto:post@himeta.de">post@himeta.de</a>
                 </p>
                 
