--- a/index.html
+++ b/index.html
@@ -6,6 +6,78 @@
     <meta name="description" content="HIMETA – Ihr zuverlässiger Partner für Drehteile, Frästeile und Warmpressteile. Beschaffung ohne Überraschung.">
     <title>HIMETA – Drehteile, Frästeile, Warmpressteile</title>
     
+    <!-- Schema.org Markup für Suchmaschinen und KI -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "HIMETA",
+        "description": "Handelspartner für Präzisionsteile – Drehteile, Frästeile und Warmpressteile aus allen gängigen Werkstoffen. Beschaffung ohne Überraschung.",
+        "url": "https://www.himeta.de",
+        "telephone": "+49-7721-9162248",
+        "email": "post@himeta.de",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "An der Buchhalde 8",
+            "addressLocality": "Brigachtal",
+            "postalCode": "78086",
+            "addressCountry": "DE"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": "48.0231",
+            "longitude": "8.4456"
+        },
+        "areaServed": {
+            "@type": "Country",
+            "name": "Germany"
+        },
+        "priceRange": "$$",
+        "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Präzisionsteile",
+            "itemListElement": [
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Product",
+                        "name": "Drehteile",
+                        "description": "Langdrehteile (Ø 3–26 mm), Kurzdrehteile (Ø 3–65 mm), Mehrspindeltechnik (Ø 5–26 mm), Mikrodrehteile (Ø 0,4–2 mm)"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Product",
+                        "name": "Frästeile",
+                        "description": "Standard-Frästeile (700 × 400 × 550 mm), Großformat-Platten (bis 1,90 m × 1,00 m)"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Product",
+                        "name": "Warmpressteile",
+                        "description": "Messing-Warmpressteile nach individueller Kundenspezifikation"
+                    }
+                }
+            ]
+        },
+        "knowsAbout": [
+            "Drehteile",
+            "Frästeile",
+            "Warmpressteile",
+            "Präzisionsteile",
+            "CNC-Fertigung",
+            "Messing",
+            "Edelstahl",
+            "Aluminium",
+            "Zerspanung"
+        ],
+        "slogan": "Beschaffung ohne Überraschung"
+    }
+    </script>
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
